--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -1,5 +1,8 @@
 name: GitHub Actions Demo
-on: [push]
+on:
+  repository_dispatch:
+    types: do-something
+
 jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
