--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -1,7 +1,7 @@
 name: GitHub Actions Demo
 on:
   repository_dispatch:
-    types: do-something
+    types: render-cv
 
 jobs:
   Explore-GitHub-Actions:
