--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -2,7 +2,9 @@ name: GitHub Actions Demo
 on:
   repository_dispatch:
     types: render-cv
-  [push]
+  push:
+    branches:
+      - master
 
 jobs:
   Explore-GitHub-Actions:
