--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -1,4 +1,4 @@
-name: GitHub Actions Demo
+name: Download Data and Render pdf file
 on:
   repository_dispatch:
     types: render-cv
@@ -10,14 +10,9 @@ jobs:
   Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "?? The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "?? This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "?? The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "?? The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "??? The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "?? This job's status is ${{ job.status }}."
+    - uses: actions/checkout@v2
+    - name: Run script file
+      run: |
+         chmod +x ./main.sh
+         ./main.sh
+      shell: bash
