--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -7,6 +7,7 @@ on:
       - master
 
 env:
+  USE_CACHE: true
   ETL_FOLDER: download-and-convert-gdocs
   TEX_FOLDER: my-awesome-cv
 
@@ -15,19 +16,25 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
     - name: Build image
       run: |
          cd $ETL_FOLDER
          docker build -t gdocs .
       shell: bash
-    - uses: actions/checkout@v2
+
     - name: Pull Image
       run: |
         docker pull thomasweise/docker-texlive-thin
       shell: bash
-    - uses: actions/checkout@v2
+
     - name: Print echo
       run: |
         docker images
       shell: bash
+
+    - name: Download Google Docs Document
+      run: |
+        docker run --name etl_python --rm -i -t -w "/app" -v "$PWD":/app gdocs python3 $ETL_FOLDER/main.py
+      shell: bask
 
