update github actions script

--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -36,6 +36,9 @@ jobs:
 
     - name: Write Config files
       run: |
+        pwd
+        echo "--------------------------------------------------------"
+        tree
         cd $ETL_FOLDER
         mkdir configs
         echo "${{ secrets.CREDENTIALS }}" >> configs/credentials.json
