--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -60,5 +60,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: zipped_cv
-        path: cv/cv.pdf
+        path: ${{ env.TEX_FOLDER }}cv/cv.pdf
+        retention-days: 1
 
