--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -2,6 +2,11 @@ name: Download Data and Render pdf file
 on:
   repository_dispatch:
     types: render-cv
+      inputs:
+        gDocsID:
+          description: 'Google Docs File ID'     
+          required: true
+          default: ${{ secrets.DOCUMENT_ID }}
   push:
     branches:
       - master
