update gh actions

--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -6,7 +6,7 @@ on:
       gDocsID:
         description: 'Google Docs File ID'     
         required: true
-        default: ${{ secrets.DOCUMENT_ID }}
+        default: 'secrets.DOCUMENT_ID'
   push:
     branches:
       - master
