update gh actions

--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -7,14 +7,19 @@ on:
         description: 'Google Docs File ID'     
         required: true
         default: 'secrets.DOCUMENT_ID'
+        env:
+          DOCUMENT_ID: ${{secrets[github.event.inputs.documentId]}}
   push:
     branches:
       - master
+    env:
+      DOCUMENT_ID: ${{ secrets.CREDENTIALS }}
 
 env:
   USE_CACHE: true
   ETL_FOLDER: download-and-convert-gdocs
   TEX_FOLDER: my-awesome-cv
+  CREDENTIALS: ${{ secrets.CREDENTIALS }}
 
 jobs:
   Get-Docker-Images-and-Compile:
@@ -30,7 +35,7 @@ jobs:
       uses: jsdaniell/create-json@v1.2.1
       with:
         name: "credentials.json"
-        json: ${{ secrets.CREDENTIALS }}
+        json: ${{ env.CREDENTIALS }}
         dir: '${{ env.ETL_FOLDER }}/configs/'
 
     - name: Update DOCUMENT_ID Config file
@@ -38,7 +43,7 @@ jobs:
       uses: jsdaniell/create-json@v1.2.1
       with:
         name: "document_id.json"
-        json: ${{ secrets.DOCUMENT_ID }}
+        json: ${{ env.DOCUMENT_ID }}
         dir: '${{ env.ETL_FOLDER }}/configs/'
           
     - name: Build image
