Revert "update gh actions"
This reverts commit ac68fa9805d198805167b848a414b329fbd3096d.

--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -8,7 +8,7 @@ on:
         required: true
         default: 'secrets.DOCUMENT_ID'
         env:
-          DOCUMENT_ID: github.event.inputs.documentId
+          DOCUMENT_ID: ${{secrets[github.event.inputs.documentId]}}
   push:
     branches:
       - master
