--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -23,7 +23,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Output Inputs
-      run: echo "${{ toJSON(github.event.inputs.document_id) }}"
+      run: echo "${{ toJSON(github.event.inputs) }}"
 
     - name: Update CREDENTIALS Config file
       id: create-json-1
