--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -19,7 +19,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: Output Inputs
-      run: echo "${{ toJSON(github.event.inputs) }}"
+      run: echo "${{ toJSON(github.event.client_payload) }}"
 
     - name: Update CREDENTIALS Config file
       id: create-json-1
