--- a/my-awesome-cv/Makefile
+++ b/my-awesome-cv/Makefile
@@ -2,8 +2,7 @@
 
 CC = xelatex
 CV_DIR = cv
-SECTIONS_DIR = cv/sections
-CV_SRCS = $(shell find $(SECTIONS_DIR) -name '*.tex')
+CV_SRCS = cv/sections.tex
 
 cv.pdf: $(CV_DIR)/cv.tex $(CV_SRCS)
 	$(CC) -output-directory=$(CV_DIR) $<
