--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -11,6 +11,7 @@ env:
   USE_CACHE: true
   ETL_FOLDER: download-and-convert-gdocs
   TEX_FOLDER: my-awesome-cv
+  PD_FOLDER: ${{ env.TEX_FOLDER }}/cv/personal_data/
 
 jobs:
   Get-Docker-Images-and-Compile:
@@ -46,6 +47,12 @@ jobs:
         name: "document_id.json"
         json: ${{ toJSON(github.event.client_payload) }}
         dir: '${{ env.ETL_FOLDER }}/configs/'
+
+    - name: Check if MOBILE set and replace it
+      if: ${{ secrets.MOBILE }}
+      run: |
+        echo ${{ secrets.MOBILE }} > ${{ env.PD_FOLDER }}/mobile.tex
+      shell: bash
           
     - name: Build image
       run: |
