--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -51,8 +51,9 @@ jobs:
     - name: Check if MOBILE set and replace it
       env: 
         mobile: ${{ secrets.MOBILE }}
-      if: ${{ env.mobile == '' }}
+      if: ${{ env.mobile != '' }}
       run: |
+        echo ${{ env.mobile }} 
         echo ${{ env.mobile }} > ${{ env.PD_FOLDER }}/mobile.tex
       shell: bash
           
