--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -11,7 +11,7 @@ env:
   USE_CACHE: true
   ETL_FOLDER: download-and-convert-gdocs
   TEX_FOLDER: my-awesome-cv
-  PD_FOLDER: $TEX_FOLDER/cv/personal_data/
+  PD_FOLDER: $TEX_FOLDER/cv/personal_data
 
 jobs:
   Get-Docker-Images-and-Compile:
@@ -53,6 +53,8 @@ jobs:
         mobile: ${{ secrets.MOBILE }}
       if: ${{ env.mobile != '' }}
       run: |
+        echo ${{ env.PD_FOLDER }} 
+        ls ${{ env.PD_FOLDER }}
         echo ${{ env.mobile }} 
         echo ${{ env.mobile }} > ${{ env.PD_FOLDER }}/mobile.tex
       shell: bash
