--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -54,9 +54,11 @@ jobs:
       if: ${{ env.mobile != '' }}
       run: |
         echo ${{ env.PD_FOLDER }} 
+        pwd
         ls ${{ env.PD_FOLDER }}
         echo ${{ env.mobile }} 
         echo ${{ env.mobile }} > ${{ env.PD_FOLDER }}/mobile.tex
+        cat ${{ env.PD_FOLDER }}/mobile.tex
       shell: bash
           
     - name: Build image
