update GH acttions workflow

--- a/.github/workflows/github-actions-script.yml
+++ b/.github/workflows/github-actions-script.yml
@@ -11,7 +11,7 @@ env:
   USE_CACHE: true
   ETL_FOLDER: download-and-convert-gdocs
   TEX_FOLDER: my-awesome-cv
-  PD_FOLDER: $TEX_FOLDER/cv/personal_data
+  PD_FOLDER: my-awesome-cv/cv/personal_data
 
 jobs:
   Get-Docker-Images-and-Compile:
